[gd_scene load_steps=4 format=3 uid="uid://0nfip0jqf6j6"]

[ext_resource type="Script" uid="uid://tutidkrnyxi5" path="res://scenes/main_menu.gd" id="1_ekxnf"]
[ext_resource type="PackedScene" uid="uid://b5alugxtb238t" path="res://gui/menu_button.tscn" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://rg6heryvtbea" path="res://backgrounds/main_menu.png" id="2_bqqt6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bqqt6")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = -169.0
offset_right = 359.0
offset_bottom = 169.0
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_group_ = true

[node name="Play" parent="MainButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Грати"

[node name="Archive" parent="MainButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Архів"

[node name="Settings" parent="MainButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Налаштування"

[node name="Quit" parent="MainButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Вийти"

[node name="PlayButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -119.0
offset_right = -1.0
offset_bottom = 219.0
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_group_ = true

[node name="NewGame" parent="PlayButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Нова гра"

[node name="Load" parent="PlayButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Продовжити"

[node name="Back" parent="PlayButtons" instance=ExtResource("1_l6cm7")]
layout_mode = 2
text = "Назад"

[connection signal="pressed" from="MainButtons/Play" to="." method="slide_play_buttons" binds= [true]]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PlayButtons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PlayButtons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PlayButtons/Back" to="." method="slide_play_buttons" binds= [false]]
